--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -35,6 +35,6 @@ jobs:
       - name: Run ESLint
         uses: ninosaurus/eslint-check@v5
         with:
-          eslint-config-path: "./.eslintrc.json"
+          eslint-config-path: "../../.eslintrc.json"
           custom-directory: "./application"
           repo-token: ${{secrets.GITHUB_TOKEN}}s
