--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -2,10 +2,13 @@ name: PR Lint
 
 name: PR Lint
 
-on: [pull_request]
+on: 
+  pull_request:
+    types: [opened, edited, reopened]
+
 
 jobs:
-  lint:
+  pr-lint:
     runs-on: ubuntu-latest
 
     strategy:
