--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -6,7 +6,7 @@ on:
 
 
 jobs:
-  pr-lint:
+  lint:
     runs-on: ubuntu-latest
 
     strategy:
@@ -30,7 +30,7 @@ jobs:
           NPM_READONLY_AUTH_TOKEN: ${{ secrets.NPM_READONLY_AUTH_TOKEN }}
 
       - name: npm install
-        working-directory: ./application
+        working-directory: .
         run: npm i --ignore-scripts
 
       - name: Run ESLint
