--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Run ESLint
         uses: ninosaurus/eslint-check@v5
         with:
-          eslint-config-path: "./.eslintrc.json"
+          eslint-config-path: "../../.eslintrc.json"
           custom-directory: "./application"
-          repo-token: ${{secrets.GITHUB_TOKEN}}s
+          repo-token: ${{secrets.GITHUB_TOKEN}}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
