--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/zanaviska/js_test/issues"
   },
-  "homepage": "https://github.com/zanaviska/js_test#readme"
+  "homepage": "https://github.com/zanaviska/js_test#readme",
+  "devDependencies": {
+    "eslint": "^7.17.0"
+  }
 }
