--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Run ESLint
         uses: ninosaurus/eslint-check@v5
         with:
-          eslint-config-path: "../../.eslintrc.json"
+          eslint-config-path: "../.eslintrc.json"
           custom-directory: "."
           repo-token: ${{secrets.GITHUB_TOKEN}}
         env:
