--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -41,11 +41,17 @@ jobs:
           repo-token: ${{secrets.GITHUB_TOKEN}}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          # Make sure the actual branch is checked out when running on pull requests
+          ref: ${{ github.head_ref }}
+          # This is important to fetch the changes to the previous commit
+          fetch-depth: 0
       - name: Prettify code
         uses: creyD/prettier_action@v3.1
         with:
           # This part is also where you can pass other options, for example:
           prettier_options: --write **/*.{js,md}
-          only_changed: True
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
