--- a/.github/workflows/pr-name.yml
+++ b/.github/workflows/pr-name.yml
@@ -6,6 +6,21 @@ on:
 
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [10.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
   lint:
     runs-on: ubuntu-latest
 
@@ -22,7 +37,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
-
       - name: npm login
         run:
           npm config set //registry.npmjs.org/:_authToken=$NPM_READONLY_AUTH_TOKEN
